Native image Lazyloading sometimes does not load https://bugs.webkit.org/show_bug.cgi?id=237703

Reviewed by Darin Adler.

Fix the problem that data URL placeholders are not replaced with the target image by
keeping track of pending URL loads ; if the new request is done with the same URL we keep
the original URL since it contains the original base URL, otherwise we use the new URL.

* LayoutTests/imported/w3c/web-platform-tests/html/semantics/embedded-content/the-img-element/image-loading-lazy-crossorigin-change.sub.html:
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/embedded-content/the-img-element/image-loading-lazy-data-url-to-https-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/embedded-content/the-img-element/image-loading-lazy-data-url-to-https-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/embedded-content/the-img-element/image-loading-lazy-data-url-to-https.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/embedded-content/the-img-element/image-loading-lazy-empty-src-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/embedded-content/the-img-element/image-loading-lazy-empty-src.html: Added.
* LayoutTests/platform/mac-wk1/TestExpectations:
* Source/WebCore/loader/ImageLoader.cpp:
(WebCore::ImageLoader::updateFromElement):
(WebCore::ImageLoader::notifyFinished):
* Source/WebCore/loader/ImageLoader.h:

Canonical link: https://commits.webkit.org/254471@main